tests/expected/task-1/32-no-nested-records.uc.out
---
test: run suites/task-1/32-no-nested-records.uc
---
suites/task-1/32-no-nested-records.uc:4:20: execution error: Nested records are not supported, use pointers
     r2 = { a: 1, b: r1 };
                     ^


exit: 1
